[package]
name = "tuck5"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0"
keywords = ["lexer", "parser", "lex", "parse", "tokenization"]
categories = ["development-tools", "parsing"]
authors = ["Mondobe"]
description = "A pragmatic lexer/parser generator"
homepage = "https://github.com/mondobe/tuck5"
repository = "https://github.com/mondobe/tuck5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
test-case = "3.1.0"
